force-app/main/default/objects/Client__c/fields/Emplopyees__c.field-meta.xml
<CustomField>
    <fullName>Emplopyees__c</fullName>
    <label>Emplopyees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>